--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,30 @@
 #result {
   display: none;
 }
+
+.body {
+  background: #DAE1E0;
+}
+
+.container-fluid {
+ width:auto;
+ margin:auto;
+ height:200px;
+ background: #E8D293;
+ overflow: auto;
+ text-align: center;
+}
+
+.header {
+  padding-top: 50px;
+}
+
+.sidebar {
+  background: #71C788;
+  height: 1000px;
+  padding-left: 20px;
+}
+
+#h3 {
+  color: #DAE1E0;
+}
